--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,11 @@
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <% if(!currentUser){ %>
-          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+          <li class="nav-item">
+            <a class="nav-link" id="navbarSupportedContent" href="/login"
+              >Login</a
+            >
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/register">Sign Up</a>
           </li>
