--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-md-12">
             <strong><%= comment.author.username %></strong>
-            <span class="float-right"><%=comment.datePosted %></span>
+            <span class="float-right"><%=comment.author.datePosted %></span>
             <p><%= comment.text %></p>
             <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
             <a
