--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,8 +2,16 @@
 <h1><%= message %></h1>
 <h1>Login</h1>
 <form action="/login" method="POST">
-  <input type="text" name="username" placeholder="username" />
-  <input type="password" name="password" placeholder="password" />
-  <input type="submit" value="Login" />
+  <div class="form-row align-items-center">
+    <div class="col-auto">
+      <input type="text" name="username" placeholder="username" />
+    </div>
+    <div class="col-auto">
+      <input type="password" name="password" placeholder="password" />
+    </div>
+    <div class="col-auto">
+      <input type="submit" value="Login" />
+    </div>
+  </div>
 </form>
 <%- include("./partials/footer") %>
