--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,5 +13,6 @@
       <input type="submit" value="Login" />
     </div>
   </div>
+  <!-- Comment for pushing-->
 </form>
 <%- include("./partials/footer") %>
