--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <h1><%= message %></h1>
 <h1>Login</h1>
 <form action="/login" method="POST">
-  <div class="form-row align-items-center">
+  <div class="form-row align-items-center mx-auto">
     <div class="col-auto">
       <input type="text" name="username" placeholder="username" />
     </div>
