--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,17 @@
 <h1><%= message %></h1>
 <h1>Login</h1>
 <form action="/login" method="POST">
-  <div class="form-row align-items-center mx-auto">
-    <div class="col-auto">
-      <input type="text" name="username" placeholder="username" />
-    </div>
-    <div class="col-auto">
-      <input type="password" name="password" placeholder="password" />
-    </div>
-    <div class="col-auto">
-      <input type="submit" value="Login" />
+  <div class="container">
+    <div class="form-row align-items-center mx-auto">
+      <div class="col-auto">
+        <input type="text" name="username" placeholder="username" />
+      </div>
+      <div class="col-auto">
+        <input type="password" name="password" placeholder="password" />
+      </div>
+      <div class="col-auto">
+        <input type="submit" value="Login" />
+      </div>
     </div>
   </div>
 </form>
