--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,19 @@
 <%- include("./partials/header") %>
-<h1><%= message %></h1>
-<h1>Login</h1>
-<form action="/login" method="POST">
-  <div class="container">
+<div class="container">
+  <h1><%= message %></h1>
+  <h1>Login</h1>
+  <form action="/login" method="POST">
     <div class="form-row align-items-center mx-auto">
-      <div class="col-auto">
+      <div class="col-auto col-sm-6 mt-5">
         <input type="text" name="username" placeholder="username" />
       </div>
-      <div class="col-auto">
+      <div class="col-auto col-sm-6 mt-5">
         <input type="password" name="password" placeholder="password" />
       </div>
-      <div class="col-auto">
+      <div class="col-auto col-sm-6 mt-5">
         <input type="submit" value="Login" />
       </div>
     </div>
-  </div>
-</form>
+  </form>
+</div>
 <%- include("./partials/footer") %>
