--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,16 @@
 <%- include("./partials/header") %>
-<div class="container col-sm-6 mt-5">
+<div class="container-fluid">
   <h1><%= message %></h1>
   <h1>Login</h1>
   <form action="/login" method="POST">
     <div class="form-row align-items-center mx-auto">
-      <div class="">
+      <div class="mx-auto">
         <input type="text" name="username" placeholder="username" />
       </div>
-      <div class="">
+      <div class="mx-auto mt-sm-1">
         <input type="password" name="password" placeholder="password" />
       </div>
-      <div class="">
+      <div class="mx-auto">
         <input type="submit" value="Login" />
       </div>
     </div>
