--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,17 @@
 <%- include("./partials/header") %>
 <div class="container-fluid">
   <h1><%= message %></h1>
-  <h1>Login</h1>
+  <h1 class="display-1">Login</h1>
   <form action="/login" method="POST">
     <div class="form-row align-items-center mx-auto">
-      <div class="mx-auto">
+      <div class="">
         <input type="text" name="username" placeholder="username" />
       </div>
-      <div class="mx-auto mt-sm-1">
+      <div class="mt-sm-1">
         <input type="password" name="password" placeholder="password" />
       </div>
-      <div class="mx-auto">
-        <input type="submit" value="Login" />
+      <div class="">
+        <input class="btn btn-primary" type="submit" value="Login" />
       </div>
     </div>
   </form>
