--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,6 @@
 <%- include("./partials/header") %>
 <div class="container-fluid">
-  <h1><%= message %></h1>
-  <h1 class="display-1">Login</h1>
+  <h1 class="display-3">Login</h1>
   <form action="/login" method="POST">
     <div class="form-row align-items-center mx-auto">
       <div class="">
@@ -10,8 +9,8 @@
       <div class="mt-sm-1">
         <input type="password" name="password" placeholder="password" />
       </div>
-      <div class="">
-        <input class="btn btn-primary" type="submit" value="Login" />
+      <div class="ml-sm-1">
+        <input class="btn btn-primary btn-sm" type="submit" value="Login" />
       </div>
     </div>
   </form>
