--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,23 @@
 <%- include("./partials/header") %>
 <div class="container-fluid">
-  <h1 class="display-3">Login</h1>
+  <div class="row justify-content-start"></div>
+
   <form action="/login" method="POST">
-    <div class="form-row align-items-center mx-auto">
-      <div class="">
-        <input type="text" name="username" placeholder="username" />
-      </div>
-      <div class="mt-sm-1">
-        <input type="password" name="password" placeholder="password" />
-      </div>
-      <div class="ml-sm-1">
-        <input class="btn btn-primary btn-sm" type="submit" value="Login" />
+    <div class="form-row align-items-center">
+      <div class="col-md-12">
+        <h1 class="display-4">Login</h1>
+        <div class="form-group">
+          <input type="text" name="username" placeholder="username" />
+        </div>
+        <div class="form-group">
+          <input type="password" name="password" placeholder="password" />
+        </div>
+        <div class="form-group">
+          <input class="btn btn-success btn-lg" type="submit" value="Login" />
+          <a class="btn btn-primary btn-lg d-xs-block mt-xs-1" href="/register"
+            >Register</a
+          >
+        </div>
       </div>
     </div>
   </form>
