--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,23 @@
 <%- include("./partials/header") %>
-<h1>Sign UP</h1>
-<form action="/register" method="POST">
-  <input type="text" name="username" placeholder="User Name" />
-  <input type="password" name="password" placeholder="password" />
-  <button>Sign UP</button>
-</form>
+<div class="container-fluid">
+  <div class="row justify-content-start">
+    <form action="/register" method="POST">
+      <div class="form-row align-items-center">
+        <div class="col-md-12">
+          <h1 class="display-4">Register</h1>
+          <div class="form-group">
+            <input type="text" name="username" placeholder="UserName" />
+          </div>
+          <div class="form-group">
+            <input type="password" name="password" placeholder="Password" />
+          </div>
+          <div class="form-group">
+            <button class="btn btn-success btn-lg">Sign up</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
+
 <%- include("./partials/footer") %>
